[gd_scene load_steps=4 format=3 uid="uid://qaken6mw13jj"]

[ext_resource type="TileSet" uid="uid://y8harmgdr2ph" path="res://game/ui/movement/line_tileset.tres" id="1_38o5i"]
[ext_resource type="Script" path="res://game/ui/movement/movement_ui.gd" id="1_obj12"]
[ext_resource type="AudioStream" uid="uid://1mc3unf6wl53" path="res://game/sounds/Swipe.ogg" id="3_n54j0"]

[node name="MovementUI" type="CanvasLayer"]
layer = 50
visible = false
follow_viewport_enabled = true
script = ExtResource("1_obj12")

[node name="LineTileMap" type="TileMap" parent="."]
unique_name_in_owner = true
tile_set = ExtResource("1_38o5i")
format = 2

[node name="ControlLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="Control" type="Control" parent="ControlLayer"]
unique_name_in_owner = true
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MoveCadence" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.25

[node name="MoveSoundPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_n54j0")
volume_db = 2.0
pitch_scale = 2.0

[connection signal="gui_input" from="ControlLayer/Control" to="." method="_on_control_gui_input"]
[connection signal="timeout" from="MoveCadence" to="." method="_next_move"]
